--- a/css/04.custom.css
+++ b/css/04.custom.css
@@ -11,6 +11,10 @@
   padding-bottom: 45px !important;
   margin-bottom: 0px;
 }
+/* .webmainpart {
+  background: url('../images/_newsite/web_img/first-section-main-bg.jpg?124') no-repeat bottom center;
+  background-size: cover;
+} */
 #slider .main-section-image {
   margin-top: -15px;
 }
@@ -318,12 +322,16 @@ a.display-centrally img {
 
 @media (min-width: 992px) and (max-width: 1324px) and (max-height: 768px) {
   .main-section-image img {
-    width: 110px !important;
+    width: 130px !important;
+  }
+  #slider {
+    background-position: top;
+    background-position-y: 0px !important;
   }
 }
 @media (min-width: 992px) and (max-width: 1641px) and (min-height: 769px) and (max-height: 1324px) {
   .main-section-image img {
-    width: 100px !important;
+    width: 130px !important;
   }
 }
 @media (min-width: 992px) and (max-width: 1641px) {
@@ -518,6 +526,11 @@ a.display-centrally img {
   #slider {
     background-position: top;
     background-position-y: -50px;
+  }
+}
+@media (max-width: 380px) {
+  .main-section-image img {
+    width: 90px !important;
   }
 }
 @media (max-width: 370px) {
