--- a/css/04.custom.css
+++ b/css/04.custom.css
@@ -6,20 +6,22 @@
 -----------------------------------------------------------------*/
 
 #slider {
-  background: url('../images/_newsite/web_img/first-section-bg.png?124') no-repeat center right;
+  background: url('../images/_newsite/web_img/section-bg.jpeg?126') no-repeat center right;
   background-size: cover;
   padding-bottom: 45px !important;
   margin-bottom: 0px;
 }
-/* .webmainpart {
-  background: url('../images/_newsite/web_img/first-section-main-bg.jpg?124') no-repeat bottom center;
+.webmainpart {
+  background: url('../images/_newsite/web_img/WebsiteActualBar.png?124') no-repeat bottom center;
   background-size: cover;
-} */
+  margin-top: -50px;
+}
 #slider .main-section-image {
-  margin-top: -15px;
+  padding: 30px;
 }
 #slider .main-section-image img {
-  width: 120px;
+  width: 140px !important;
+  margin-bottom: 30px;
 }
 #slider > div {
   min-height: 100vh;
@@ -309,30 +311,17 @@ a.display-centrally img {
   }
 }
 @media (min-width: 913px) and (max-width: 1200px){
-  #slider .main-section-image img {
-    width: 165px;
-  }
+
 }
 @media (max-width: 1400px) {
-  #slider {
-    background-position: top;
-    background-position-y: -44px;
-  }
+
 }
 
 @media (min-width: 992px) and (max-width: 1324px) and (max-height: 768px) {
-  .main-section-image img {
-    width: 130px !important;
-  }
-  #slider {
-    background-position: top;
-    background-position-y: 0px !important;
-  }
+
 }
 @media (min-width: 992px) and (max-width: 1641px) and (min-height: 769px) and (max-height: 1324px) {
-  .main-section-image img {
-    width: 130px !important;
-  }
+
 }
 @media (min-width: 992px) and (max-width: 1641px) {
   #slider .vertical-middle {
@@ -341,9 +330,6 @@ a.display-centrally img {
   }
   #slider .bottom-section {
     bottom: 5% !important;
-  }
-  #slider {
-    background-position-y: -90px;
   }
   .flash-icon-main {
     width: 37%;
@@ -370,18 +356,12 @@ a.display-centrally img {
   }
 }
 @media (min-width: 992px) and (max-width: 1641px) and (min-height: 1041px) {
-  .main-section-image img {
-    width: 185px !important;
-  }
+
   #slider .vertical-middle {
     top: 6% !important;
   }
   #slider .bottom-section {
     bottom: 6% !important;
-  }
-  #slider {
-    background-position: top;
-    background-position-y: -100px;
   }
 }
 @media (min-width: 1200px) and (max-width: 1400px) {
@@ -398,11 +378,6 @@ a.display-centrally img {
   }
   .whitepaper img {
     width: 180px !important;
-  }
-
-  #slider {
-    background-position: top;
-    background-position-y: -50px;
   }
 }
 @media (min-width: 991px) and (max-width: 1199px) {
@@ -433,16 +408,22 @@ a.display-centrally img {
   #slider .LearnMoreButton img {
     width: 210px !important;
   }
-  #slider {
-    background-position: top;
-    background-position-y: -50px;
-  }
 }
 @media (max-width: 991px) {
+
+  #primary-menu {
+      display: block;
+      position: absolute;
+      float: none;
+      top: 25px;
+      margin-left: 63px;
+      background: rgba(0, 0, 0, 0.5);
+  }
   #logo { display: none !important; }
-  #slider .main-section-image {
+  #slider .main-section-image , #slider .webmainpart {
     margin-top: 0;
   }
+
   #slider .bottom-section {
     position: absolute;
     bottom:0% !important;
@@ -506,9 +487,7 @@ a.display-centrally img {
   }
 }
 @media (max-width: 768px) and (min-height: 900px) {
-  .main-section-image img {
-    width: 150px !important;
-  }
+
   #slider .vertical-middle {
     top: 30px !important;
   }
@@ -523,21 +502,13 @@ a.display-centrally img {
   }
 }
 @media (min-width: 512px) and (max-width:912px) {
-  #slider {
-    background-position: top;
-    background-position-y: -50px;
-  }
+
 }
 @media (max-width: 380px) {
-  .main-section-image img {
-    width: 90px !important;
-  }
+
 }
 @media (max-width: 370px) {
-  #slider {
-    background-position: top;
-    background-position-y: -44px;
-  }
+
   #slider .bottom-section {
     position: relative !important;
     bottom:0% !important;
