--- a/css/04.custom.css
+++ b/css/04.custom.css
@@ -51,14 +51,14 @@
   min-height: 100vh; */
 }
 
-#about .topmargin-lg  , #kpi-section .topmargin-lg{
+#about .topmargin-lg  , #kpi .topmargin-lg{
   padding-top: 15px;
 }
-#about .col-lg-4 , #kpi-section .col-lg-4 {
+#about .col-lg-4 , #kpi .col-lg-4 {
   padding: 0px !important;
   text-align: center;
 }
-#about .inner-section , #kpi-section .inner-section {
+#about .inner-section , #kpi .inner-section {
   padding: 50px 50px 0px;
   height: 422px;
   width: 422px;
@@ -68,13 +68,13 @@
   display: inline-grid !important;
   cursor: pointer;
 }
-#about .inner-section:hover , #kpi-section .inner-section:hover {
+#about .inner-section:hover , #kpi .inner-section:hover {
   background-color: #E0AE27;
 }
-#about .inner-section:hover *  , #kpi-section .inner-section:hover * {
+#about .inner-section:hover *  , #kpi .inner-section:hover * {
   color: #000;
 }
-#about .inner-section h2 , #kpi-section .inner-section h2 {
+#about .inner-section h2 , #kpi .inner-section h2 {
   margin: 0;
 }
 #about .col-lg-4 h4 {
@@ -338,7 +338,7 @@ a.display-centrally img {
   }
 }
 @media (min-width: 1200px) and (max-width: 1400px) {
-  #about .inner-section , #kpi-section .inner-section {
+  #about .inner-section , #kpi .inner-section {
     padding: 50px 50px 0px;
     height: 346px;
     width: 346px;
@@ -346,7 +346,7 @@ a.display-centrally img {
   #about .inner-section h4 {
     font-size: 13px;
   }
-  #about .inner-section.second-child h4, #about .inner-section.last-child h4 , #kpi-section .inner-section h4 {
+  #about .inner-section.second-child h4, #about .inner-section.last-child h4 , #kpi .inner-section h4 {
     font-size: 15px;
   }
   .whitepaper img {
@@ -373,18 +373,18 @@ a.display-centrally img {
     padding: 15px 9px;
     font-size: 10px;
   }
-  #about .inner-section , #kpi-section .inner-section {
+  #about .inner-section , #kpi .inner-section {
     padding: 40px 40px 0px;
     height: 297px;
     width: 297px;
   }
-  #about .inner-section h2 , #kpi-section .inner-section h2 {
+  #about .inner-section h2 , #kpi .inner-section h2 {
     font-size: 26px;
   }
   #about .inner-section h4 {
     font-size: 11.3px;
   }
-  #about .inner-section.second-child h4, #about .inner-section.last-child h4 , #kpi-section .inner-section h4 {
+  #about .inner-section.second-child h4, #about .inner-section.last-child h4 , #kpi .inner-section h4 {
     font-size: 13px;
   }
   .whitepaper img {
@@ -490,7 +490,7 @@ a.display-centrally img {
   #slider .LearnMoreButton img {
     width: 210px !important;
   }
-  #about .inner-section , #kpi-section .inner-section {
+  #about .inner-section , #kpi .inner-section {
     padding: 46px 46px 0px;
     height: 365px;
     width: 365px;
@@ -498,24 +498,24 @@ a.display-centrally img {
   #about .inner-section h4 {
     font-size: 14px;
   }
-  #about .inner-section.second-child h4, #about .inner-section.last-child h4 , #kpi-section .inner-section h4 {
+  #about .inner-section.second-child h4, #about .inner-section.last-child h4 , #kpi .inner-section h4 {
     font-size: 16.7px;
   }
 
 }
 @media (max-width: 420px) {
-  #about .inner-section , #kpi-section .inner-section {
+  #about .inner-section , #kpi .inner-section {
     padding: 30px 30px 0px;
     height: 265px;
     width: 265px;
   }
-  #about .inner-section h2 , #kpi-section .inner-section h2 {
+  #about .inner-section h2 , #kpi .inner-section h2 {
     font-size: 21px;
   }
   #about .inner-section h4 {
     font-size: 10px;
   }
-  #about .inner-section.second-child h4, #about .inner-section.last-child h4 , #kpi-section .inner-section h4 {
+  #about .inner-section.second-child h4, #about .inner-section.last-child h4 , #kpi .inner-section h4 {
     font-size: 12px;
   }
   #wallet .col-lg-3 {
