--- a/css/04.custom.css
+++ b/css/04.custom.css
@@ -59,7 +59,7 @@
   text-align: center;
 }
 #about .inner-section , #kpi .inner-section {
-  padding: 50px 50px 0px;
+  padding: 40px 43px 0px;
   height: 422px;
   width: 422px;
   border: 2px solid #E0AE27;
@@ -72,13 +72,13 @@
   background-color: #E0AE27;
 }
 #about .inner-section:hover *  , #kpi .inner-section:hover * {
-  color: #000;
+  color: #0A0A0A;
 }
 #about .inner-section h2 , #kpi .inner-section h2 {
   margin: 0;
 }
 #about .col-lg-4 h4 {
-  font-size: 17px;
+  font-size: 16.5px;
   font-weight: normal;
 }
 #about .inner-section.second-child h4, #about .inner-section.last-child h4 {
@@ -102,7 +102,7 @@
   margin-bottom: 10px;
 }
 .kpi-section .inner-section:hover .color-gold {
-  color: #fff !important;
+  color: #0A0A0A !important;
 }
 
 #wallet {
@@ -111,7 +111,7 @@
 }
 
 #whitepaper {
-  background: url('../images/_newsite/resource-sec-bg.png') no-repeat center top;
+  background: url('../images/_newsite/resource-sec-background.png') scroll no-repeat bottom/cover;
   background-size: cover;
 }
 
