Added Merchant section on Homepage

--- a/css/04.custom.css
+++ b/css/04.custom.css
@@ -625,7 +625,7 @@ a.display-centrally img {
   margin: auto;
 }
 
-#partners span {
+#merchants span {
   font-style: normal;
 }
 #team span {
@@ -635,7 +635,7 @@ a.display-centrally img {
   color: white;
 }
 .fab { font-size: 18px !important; }
-#partners ul {
+#merchants ul {
   width:100%;
 }
 .partners-title {
