--- a/css/04.custom.css
+++ b/css/04.custom.css
@@ -796,3 +796,23 @@ animation: spin 10s linear infinite;
 .dark .form-control:not(.not-dark), .dark .sm-form-control:not(.not-dark) {
   color: #fff !important;
 }
+
+a.flash_button_style {
+  font-size: 16px;
+  line-height: 36px;
+  height: 36px;
+  font-weight: 600;
+  padding-left: 20px;
+  padding-right: 20px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  padding: 17px;
+  color: #ffffff;
+  border: 2px solid #d4a525;
+  letter-spacing: 1px;
+}
+
+a.flash_button_style:hover {
+  background-color: #d4a525;
+  color: #000000;
+}
