--- a/css/achievement_style.css
+++ b/css/achievement_style.css
@@ -1,45 +1,45 @@
 /* Roadmap - achievements */
-#achievements .inner-section {
+#roadmap .inner-section {
   padding: 10px;
   border: 2px solid #E0AE27;
   border-radius: 6px;
   min-height: 265px;
 }
-#achievements .inner-section h2 {
+#roadmap .inner-section h2 {
   margin-bottom: 5px;
   font-weight: normal;
 }
-#achievements .inner-section h3 {
+#roadmap .inner-section h3 {
   margin-bottom: 0px;
   font-weight: normal;
 }
-#achievements .inner-section h5 {
+#roadmap .inner-section h5 {
   margin-bottom: 0 !important;
 }
-#achievements .inner-section h5 > div {
+#roadmap .inner-section h5 > div {
   margin-bottom: 5px;
   font-weight: normal;
 }
-#achievements .inner-section .sub-section span {
+#roadmap .inner-section .sub-section span {
   color: #FFF;
   font-weight: normal;
   font-size: 16px;
 }
-#achievements .inner-section .sub-section {
+#roadmap .inner-section .sub-section {
   margin-bottom: 10px;
 }
-#achievements .inner-section .sub-section div:first-child {
+#roadmap .inner-section .sub-section div:first-child {
   margin: auto;
   margin-bottom: 0;
 }
-/*#achievements .inner-section .sub-section div.fill-in-block {
+/*#roadmap .inner-section .sub-section div.fill-in-block {
   margin: auto;
 } */
-#achievements .inner-section .sub-section span.fill-in-text {
+#roadmap .inner-section .sub-section span.fill-in-text {
   float: right;
   font-size: 12px;
 }
-#achievements .inner-section .sub-section span.fill-in {
+#roadmap .inner-section .sub-section span.fill-in {
   height: 9px;
   color: #FFF;
   float: right;
@@ -50,10 +50,10 @@
   background-color: #0A0A0A;
   z-index: 1;
 }
-#achievements .collapse.show {
+#roadmap .collapse.show {
   display: flex !important;
 }
-#achievements .inner-section .sub-section span.fill-in:after {
+#roadmap .inner-section .sub-section span.fill-in:after {
     content: '\A';  /*attr(data-width) '% Completed';*/
     position:absolute;
     background-color:#E0AE27;
@@ -63,68 +63,68 @@
     z-index: -1;
     color:#0A0A0A;
 }
-#achievements .inner-section .starting-soon
+#roadmap .inner-section .starting-soon
 {
   margin-bottom: 10px !important;
 }
-#achievements .inner-section .q1-last-margin
+#roadmap .inner-section .q1-last-margin
 {
   margin-bottom: 11px !important;
 }
-#achievements .inner-section .q2-last-margin
+#roadmap .inner-section .q2-last-margin
 {
   margin-bottom: 10px !important;
 }
-#achievements .inner-section .q3-last-margin
+#roadmap .inner-section .q3-last-margin
 {
   margin-bottom: 11px !important;
 }
-#achievements .inner-section .q4-last-margin
+#roadmap .inner-section .q4-last-margin
 {
   margin-bottom: 10px !important;
 }
-#achievements .inner-section .sub-section span.fill-in[data-width='100']:after {
+#roadmap .inner-section .sub-section span.fill-in[data-width='100']:after {
   width: 100%;
 }
-#achievements .inner-section .sub-section span.fill-in[data-width='95']:after {
+#roadmap .inner-section .sub-section span.fill-in[data-width='95']:after {
   width: 95%;
 }
-#achievements .inner-section .sub-section span.fill-in[data-width='90']:after {
+#roadmap .inner-section .sub-section span.fill-in[data-width='90']:after {
   width: 90%;
 }
-#achievements .inner-section .sub-section span.fill-in[data-width='80']:after {
+#roadmap .inner-section .sub-section span.fill-in[data-width='80']:after {
   width: 80%;
 }
-#achievements .inner-section .sub-section span.fill-in[data-width='75']:after {
+#roadmap .inner-section .sub-section span.fill-in[data-width='75']:after {
   width: 75%;
 }
-#achievements .inner-section .sub-section span.fill-in[data-width='70']:after {
+#roadmap .inner-section .sub-section span.fill-in[data-width='70']:after {
   width: 70%;
 }
-#achievements .inner-section .sub-section span.fill-in[data-width='60']:after {
+#roadmap .inner-section .sub-section span.fill-in[data-width='60']:after {
   width: 60%;
 }
-#achievements .inner-section .sub-section span.fill-in[data-width='55']:after {
+#roadmap .inner-section .sub-section span.fill-in[data-width='55']:after {
   width: 55%;
 }
-#achievements .inner-section .sub-section span.fill-in[data-width='50']:after {
+#roadmap .inner-section .sub-section span.fill-in[data-width='50']:after {
   width: 50%;
 }
-#achievements .inner-section .sub-section span.fill-in[data-width='40']:after {
+#roadmap .inner-section .sub-section span.fill-in[data-width='40']:after {
   width: 40%;
 }
-#achievements .inner-section .sub-section span.fill-in[data-width='30']:after {
+#roadmap .inner-section .sub-section span.fill-in[data-width='30']:after {
   width: 30%;
 }
-#achievements .inner-section .sub-section span.fill-in[data-width='25']:after {
+#roadmap .inner-section .sub-section span.fill-in[data-width='25']:after {
   width: 25%;
 }
-#achievements .inner-section .sub-section span.fill-in[data-width='20']:after {
+#roadmap .inner-section .sub-section span.fill-in[data-width='20']:after {
   width: 20%;
 }
-#achievements .inner-section .sub-section span.fill-in[data-width='15']:after {
+#roadmap .inner-section .sub-section span.fill-in[data-width='15']:after {
   width: 15%;
 }
-#achievements .inner-section .sub-section span.fill-in[data-width='10']:after {
+#roadmap .inner-section .sub-section span.fill-in[data-width='10']:after {
   width: 10%;
 }
